auth and cognito service adde
