# services/cognito.ts
@@ -1,0 +1,16 @@
+import { Request, Response, NextFunction } from "express";
+import cognitoClient from "../aws/cognitoProviderClient.ts";
+
+const CognitoService = {
+  getUser: async function(req: Request, res: Response, next: NextFunction) {
+    try {
+      const { UserAttributes, Username } = await cognitoClient.getUser(req.headers.authorization?.split(" ")[1] as string);
+      res.json({ UserAttributes, Username });
+
+    } catch (error) {
+      next(error);
+    }
+  },
+};
+
+export default CognitoService;
